[workspace]
members = [
    "common/s2n-*",
    "quic/s2n-*",
]
resolver = "2"

[workspace.package]
rust-version = "1.63"
repository = "https://github.com/aws/s2n-quic"
authors = ["AWS s2n"]
edition = "2021"
license = "Apache-2.0"

[profile.release]
lto = true
codegen-units = 1
incremental = false

[profile.bench]
lto = true
codegen-units = 1
incremental = false
