[package]
name = "s2n-codec"
version = "0.4.0"
description = "Internal crate used by s2n-quic"
repository.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
# Exclude corpus files when publishing to crates.io
exclude = ["corpus.tar.gz"]

[features]
default = ["std", "bytes"]
std = []
testing = ["std", "generator"]
checked_range_unsafe = []
generator = ["bolero-generator"]

[dependencies]
bolero-generator = { version = "0.8", default-features = false, optional = true }
byteorder = { version = "1.1", default-features = false }
bytes = { version = "1", default-features = false, optional = true }
zerocopy = "=0.6.0"
zerocopy-derive = "=0.3.0"
