[package]
name = "custom-limits"
version = "0.1.0"
authors = ["AWS s2n"]
edition = "2021"

[dependencies]
# Remove the `provider-tls-default` feature and add `provider-tls-rustls`
s2n-quic = { version = "1", path = "../../quic/s2n-quic", default-features = false, features = ["provider-address-token-default", "provider-tls-rustls"] }
s2n-quic-rustls = { path = "../../quic/s2n-quic-rustls" }
tokio = { version = "1", features = ["full"] }
rustls = { version = "0.20", features = ["quic"] }


[workspace]
members = ["."]
