[package]
name = "netbench-collector"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
handlebars = "4"
netbench = { version = "0.1", path = "../netbench" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
sysinfo = "0.26"
