[package]
name = "netbench-scenarios"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
clap = { version = "2", features = ["color", "suggestions"] }
humantime = "2"
netbench = { path = "../netbench" }
