[package]
name = "s2n-quic-events"
# this in an unpublished internal crate so the version should not be changed
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
# This is a commit-time crate and should not be published
publish = false

[dependencies]
glob = "0.3"
heck = "0.4"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full", "extra-traits"] }
