[package]
name = "s2n-quic-tls-default"
version = "0.18.1"
description = "Internal crate used by s2n-quic"
repository.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
# Exclude corpus files when publishing to crates.io
exclude = ["corpus.tar.gz"]

[target.'cfg(unix)'.dependencies]
s2n-quic-tls = { version = "=0.18.1", path = "../s2n-quic-tls" }

[target.'cfg(not(unix))'.dependencies]
s2n-quic-rustls = { version = "=0.18.1", path = "../s2n-quic-rustls" }
