[package]
name = "bumper"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
octocrab = "0.19.0"
cargo_toml = "0.15.2"
toml = "0.7.3"
serde = "1.0"

[workspace]
members = ["."]
